Bug 102781 - Sort pseudos by status doesn't work without restart.
Summary: Sort pseudos by status doesn't work without restart.
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-03-29 19:51 UTC by Joey Salberter
Modified: 2010-07-01 16:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joey Salberter 2005-03-29 19:51:17 UTC
Version:           0.16 (using KDE KDE 3.4.0)
Installed from:    Slackware Packages
Compiler:          gcc 3.3.5 Reading specs from /usr/lib/gcc-lib/i486-slackware-linux/3.3.5/specs
Configured with: ../gcc-3.3.5/configure --prefix=/usr --enable-shared --enable-threads=posix --enable-__cxa_atexit --disable-checking --with-gnu-ld --verbose --target=i486-slackware-linux --host=i486-slackware-linux
Thread model: posix
OS:                Linux

In the Nickname list preferences, when I select "Sort by user status" and then I click "Ok", that doesn't work. Pseudos will only be sorted by status after Konversation restarted. But we shouldn't have to restart Konversation.
Comment 1 Peter Simonsson 2005-04-01 22:23:33 UTC
CVS commit by psn: 

Update nicklist sorting when changing options

BUG:102781


  M +1 -1      channel.cpp   1.310


--- kdeextragear-2/konversation/konversation/channel.cpp  #1.309:1.310
@@ -1741,5 +1741,5 @@ void Channel::updateFonts()
   }
 
-  nicknameListView->sort();
+  nicknameListView->resort();
 
   nicknameListView->setPaletteForegroundColor(fg);
Comment 2 Peter Simonsson 2010-07-01 16:02:11 UTC
commit 711b8746bb3010c79599e5a34d57c4367337b0d3
Author: Peter Simonsson <peter.simonsson@gmail.com>
Date:   Fri Apr 1 20:23:10 2005 +0000

    Update nicklist sorting when changing options
    
    BUG:102781
    
    svn path=/trunk/kdeextragear-2/konversation/; revision=402504

diff --git a/konversation/channel.cpp b/konversation/channel.cpp
index f2b50eb..8424d2b 100644
--- a/konversation/channel.cpp
+++ b/konversation/channel.cpp
@@ -1740,7 +1740,7 @@ void Channel::updateFonts()
       QString::null);
   }
 
-  nicknameListView->sort();
+  nicknameListView->resort();
 
   nicknameListView->setPaletteForegroundColor(fg);
   nicknameListView->setPaletteBackgroundColor(bg);