Update nicklist sorting when changing options

BUG:102781

svn path=/trunk/kdeextragear-2/konversation/; revision=402504